Thu May 17 14:26:11 GMT 2012  Olly Betts <olly@survex.com>

	* backends/brass/,backends/chert/: After closing the database, methods
	  which try to use the termlist would throw FeatureUnavailableError
	  with message "Database has no termlist", assuming that the termlist
	  table not being open meant it wasn't present.  Fix to check if the
	  postlist_table is open to determine which case we're in.
	* tests/api_closedb.cc: Improve test coverage for closed databases.
	  (ticket#337)

Tue May 15 11:24:34 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog and 1.2.10.

Tue May 15 11:12:42 GMT 2012  Olly Betts <olly@survex.com>

	* backends/chert/chert_cursor.cc: Fix incorrect use of "delete" to
	  "delete []".  The type is POD, so I suspect this mistake didn't
	  actually cause any problems, and it only happens when a cursor
	  gets rebuilt because the B-tree has gained a level, so it's
	  a rather rare occurrence.

Tue May 15 11:09:44 GMT 2012  Olly Betts <olly@survex.com>

	* backends/brass/brass_cursor.cc: Fix incorrect use of "delete" to
	  "delete []".  The type is POD, so I suspect this mistake didn't
	  actually cause any problems, and it only happens when a cursor
	  gets rebuilt because the B-tree has gained a level, so it's
	  a rather rare occurrence.

Thu May 10 02:16:21 GMT 2012  Olly Betts <olly@survex.com>

	* HACKING: Update Debian/Ubuntu packaging instructions.

Thu May 10 02:14:48 GMT 2012  Olly Betts <olly@survex.com>

	* HACKING: freshmeat -> freecode.

Wed May 09 02:54:40 GMT 2012  Olly Betts <olly@survex.com>

	* tests/api_wrdb.cc: Add "safeunistd.h", required for GCC 4.7.

Wed May 09 00:09:17 GMT 2012  Olly Betts <olly@survex.com>

	* api/query.cc: Construct MatchAll using constructor rather than
	  assignment syntax.

Wed May 09 00:08:29 GMT 2012  Olly Betts <olly@survex.com>

	* backends/brass/brass_cursor.h: Whitespace tweaks.

Tue May 08 23:51:01 GMT 2012  Olly Betts <olly@survex.com>
